# orchestration-course

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
courselib/: __init__.py  certificate.py  economy.py  exercises.py  hub_lite.py  i18n.py  llm.py  orchestration.py  trust.py
docs/: README.md  step-by-step.es.md  step-by-step.md  step-by-step.ru.md
i18n/: en.json  es.json  ru.json
labs/: lab01_agent_and_tool.py  lab02_topologies.py  lab03_handoff.py  lab04_discover_invoke.py  lab05_state_context.py  lab06_guardrails.py  lab07_receipt_verify.py  lab08_metered_economy.py  run_exercises.py
notebooks/: lab01_agent_and_tool.ipynb  lab02_topologies.ipynb  lab03_handoff.ipynb  lab04_discover_invoke.ipynb  lab05_state_context.ipynb  lab06_guardrails.ipynb  lab07_receipt_verify.ipynb  lab08_metered_economy.ipynb
scripts/: build_course_assets.py  build_site.py  ci_coverage_badge.sh  generate_certificate.py  labs_to_notebooks.py  patch_aimarket_hub.py  publish_to_github.sh
site_assets/: app.js  certificate.js  progress.js
tests/: test_economy.py  test_exercises.py  test_hub_lite.py  test_i18n.py  test_orchestration.py  test_state_guardrails.py  test_trust.py
